@@ -1,0 +1,29 @@
+<printer id="printer/Apple-Color_StyleWriter_6500">
+  <make>Apple</make>
+  <model>Color StyleWriter 6500</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <dpi>
+      <!--x unknown--><!--y unknown--></dpi>
+    </resolution>
+    <consumables>
+    <!--no comments--><!--one or more "partno" elements.--></consumables>
+  </mechanism><!--no "url"-->
+  <lang>
+    <proprietary/>
+  <!--no pjl--><!--No "text"?--></lang>
+  <autodetect>
+  <!--no known parport probe information--></autodetect>
+  <functionality>B</functionality>
+
+  <driver>gutenprint</driver><!--verified--><!--no "contrib_url"-->
+  <comments>
+    <en>
+       
+       Probably equivalent to the HP DeskJet 800.
+
+    </en>
+  </comments>
+</printer>
