@@ -1,0 +1,41 @@
+<printer id="printer/Canon-SELPHY-CP-500">
+  <make>Canon</make>
+  <model>SELPHY-CP-500</model>
+  <mechanism>
+    <sublimation/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>300</x>
+        <y>300</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>Packs with special paper and three-color ribbon</en>
+      </comments>
+    <!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url></url>
+  <lang>
+    <proprietary/>
+  <!--no pjl--><!--No "text"?--></lang>
+  <autodetect>
+  <!--no known parport probe information--></autodetect>
+  <functionality>B</functionality>
+  <driver>gutenprint</driver>
+  <contrib_url></contrib_url>
+  <comments>
+    <en>
+
+    Portable dye-sublimation photo printer in 4x6inch/10x15cm photo
+    size. 300 dpi, full 24-bit color depth (256 levels per CMY color
+    component), full-bleed (border-less). Produces laboratory-like
+    photos. Does not print on normal paper.&lt;p&gt;
+
+    Can be connected to the USB port of many Canon cameras for direct
+    printing controlled by the camera.&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
