@@ -1,0 +1,33 @@
+<printer id="printer/Canon-iP4000">
+  <make>Canon</make>
+  <model>iP4000</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <!-- <dpi>
+        <x>1200</x>
+        <y>1200</y>
+      </dpi> -->
+    </resolution>
+    <consumables>
+      <comments>
+        <en></en>
+      </comments>
+    <!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <lang>
+    <proprietary/><!--no pjl-->
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+  </autodetect>
+  <functionality>B</functionality>
+  <driver>gutenprint</driver>
+  <comments>
+    <en>
+    </en>
+  </comments>
+</printer>
