@@ -41,6 +41,18 @@
 	  printer/Epson-PX_G920.xml, printer/Epson-PX_G5000.xml,
 	  printer/Epson-PX_V600.xml: New Epson printers and MF devices.
 
+	* printer/Apple-Color_StyleWriter_4100.xml,
+	  printer/Apple-Color_StyleWriter_4500.xml,
+	  printer/Apple-Color_StyleWriter_6500.xml,
+	  printer/Canon-CP-220.xml, printer/Canon-CP-200.xml,
+	  printer/Canon-CP-300.xml, printer/Canon-CP-330.xml,
+	  printer/Canon-SELPHY-CP-400.xml,
+	  printer/Canon-SELPHY-CP-500.xml,
+	  printer/Canon-SELPHY-CP-510.xml,
+	  printer/Canon-SELPHY-CP-600.xml,
+	  printer/Canon-SELPHY-CP-710.xml, printer/Canon-iP4000.xml: Added
+	  more printers supported by the Gutenprint driver.
+
 2006-02-21  George Liu <george.liu@ussj.ricoh.com>
 
 	* printer/: Updated 388 Ricoh Family and OEM xml files.
